# flama-demos

./: .gitignore  README.md
01-mlapi-sklearn-pipeline/: README.md  pyproject.toml
01-mlapi-sklearn-pipeline/data/: artifact.json  data.parquet  flama.json  input.json
01-mlapi-sklearn-pipeline/src/api/: __main__.py  app.py
01-mlapi-sklearn-pipeline/src/pipeline/: __main__.py
02-jwt-component/: README.md  pyproject.toml
02-jwt-component/src/: __main__.py  app.py
03-domain-driven-design/: README.md  migration.py  models.db  pyproject.toml
03-domain-driven-design/.images/: DDD-flama.key
03-domain-driven-design/src/: app.py  models.py  repositories.py  resources.py  schemas.py  worker.py
